css fix for button overflow

--- a/app/assets/stylesheets/worklogs.css.sass
+++ b/app/assets/stylesheets/worklogs.css.sass
@@ -1,2 +1,8 @@
 .set-time
   margin-bottom: 15px
+.time-buttons
+  .btn-group
+    margin-bottom: 15px
+  .btn-group
+    + .btn-group
+      margin-left: 0px
